--- a/.gitignore
+++ b/.gitignore
@@ -1,15 +1,21 @@
 *.iml
 .gradle
 /local.properties
-/.idea/caches
-/.idea/libraries
-/.idea/modules.xml
-/.idea/workspace.xml
-/.idea/navEditor.xml
-/.idea/assetWizardSettings.xml
+/.idea/
 .DS_Store
 /build
 /captures
 .externalNativeBuild
 .cxx
 local.properties
+build/
+captures/
+.externalNativeBuild/
+.cxx/
+*.log
+*.apk
+*.ap_
+*.swp
+**/*.jar
+caches/
+wrapper/dists/
